kubernetes/argocd-extras/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway-ingress
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: pangolin-gateway
      namespace: istio-ingress
  hostnames:
    - argocd.alexmickelson.guru
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
